kustomize/overlays/production/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: starter-api-ingress
    annotations:
        cert-manager.io/cluster-issuer: 'letsencrypt-production'
spec:
    ingressClassName: nginx
    tls:
        - hosts:
              - starter-api.javobal.xyz
          secretName: production-starter-api-tls
    rules:
        - host: starter-api.javobal.xyz
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: starter-api-service
                            port:
                                number: 80
